Add the testing stage

--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -7,5 +7,10 @@ pipeline{
                 sh 'echo Hello Class'
             }
         }
+        stage("Test"){
+            steps{
+                sh 'echo Here Testing command'
+            }
+        }
     }
 }
