--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -5,6 +5,7 @@ pipeline{
             steps{
                 sh 'echo Hello World'
                 sh 'echo Hello Class'
+                sh 'mkdir'
             }
         }
         stage("Test"){
