--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline{
             steps{
                 sh 'echo Hello World'
                 sh 'echo Hello Class'
-                sh 'mkdir'
+                sh 'echo Hello Danii'
             }
         }
         stage("Test"){
