--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline{
     agent any
     stages{
         stage("Test"){
-            agent{ docker '18-alpine3.16'}
+            agent{ docker 'node:18-alpine3.16'}
             steps{
                 sh 'npm version'
             }
