--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -6,6 +6,7 @@ pipeline{
             steps {
                 sh 'npm version'
                 sh 'ls -la'
+                sh 'npm run test'
             }
         }
     }
