--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -6,7 +6,8 @@ pipeline{
             steps {
                 sh 'npm version'
                 sh 'ls -la'
-                sh 'npm install -g jest'
+                sh 'npm install --save-dev ts-jest'
+                sh 'npm install --save-dev jest'
                 sh 'npm run test'
             }
         }
