--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -8,6 +8,7 @@ pipeline{
                 sh 'ls -la'
                 sh 'npm install --save-dev ts-jest'
                 sh 'npm install --save-dev jest'
+                sh 'npm i --save-dev @types/jest'
                 sh 'npm run test'
             }
         }
