--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -6,9 +6,7 @@ pipeline{
             steps {
                 sh 'npm version'
                 sh 'ls -la'
-                sh 'npm install --save-dev ts-jest'
-                sh 'npm install --save-dev jest'
-                sh 'npm i --save-dev @types/jest'
+                sh 'npm install'
                 sh 'npm run test'
             }
         }
