--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -7,7 +7,7 @@ pipeline{
                 sh 'npm version'
                 sh 'ls -la'
                 sh 'npm install'
-                sh 'npm run test'
+                sh 'npm run test test/'
             }
         }
     }
