--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -4,7 +4,8 @@ pipeline{
         stage("Test"){
             agent { docker 'node:18-alpine3.16'}
             steps {
-                sh 'apk add --no-cache ffmpeg'
+                sh 'apk add curl sudo'
+                sh 'sudo apk add --update ffmpeg'
                 sh 'npm install --save-dev ts-jest'
                 sh 'npm i --save-dev @types/jest'
                 sh 'npm run test'
