--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -10,5 +10,10 @@ pipeline{
                 sh 'npm run test'
             }
         }
+        post{
+            always{
+                archiveArtifacts artifacts: '/coverage/index.html', followSymlinks: false
+            }
+        }
     }
 }
