--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -11,7 +11,7 @@ pipeline{
             }
             post{
                 always{
-                    archiveArtifacts artifacts: 'coverage/index.html', followSymlinks: false
+                    archiveArtifacts artifacts: 'coverage/lcov-report/index.html', followSymlinks: false
                 }
             }
         }
