--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -5,13 +5,12 @@ pipeline{
             agent { docker 'node:18-alpine3.16'}
             steps {
                 sh 'npm install'
-                sh 'npm install --save-dev ts-jest'
                 sh 'npm i --save-dev @types/jest'
                 sh 'npm run test'
             }
             post{
                 always{
-                    archiveArtifacts artifacts: 'coverage/lcov-report/index.html', followSymlinks: false
+                    archiveArtifacts artifacts: 'test/report/report.html', followSymlinks: false
                 }
             }
         }
