--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "tsc": "tsc",
     "lint": "eslint . --ext .js",
     "lint:fix": "eslint . --fix",
-    "test": "jest --coverage",
+    "test": "jest",
     "start": "npx ts-node index.ts"
   },
   "author": "",
