--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -27,6 +27,18 @@ pipeline{
                     -Dsonar.host.url=https://sonarcloud.io'
             }
         }
+        stage("Quality Gate"){
+            steps{
+                timeout(time: 5, unit: 'MINUTES') {
+                script{
+                    def qg = waitForQualityGate()
+                    if (qg.status != 'OK') {
+                        error "Pipeline aborted due to quality gate failure: ${qg.status}"
+                    }
+                }
+            }
+          }
+        }
         stage('Package'){
             steps{
                 sh'docker build -t at20_convert_service .'
