--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline{
                 }
             }
         }
-        stage("CodeInspection"){
+        stage('CodeInspection'){
             steps{
                 sh'/var/jenkins_home/.sonar/sonar-scanner-4.7.0.2747-linux/bin/sonar-scanner \
                     -Dsonar.organization=at20-dc \
@@ -27,17 +27,17 @@ pipeline{
                     -Dsonar.host.url=https://sonarcloud.io'
             }
         }
-        stage("Quality Gate"){
+        stage('Quality gate'){
             steps{
-                timeout(time: 5, unit: 'MINUTES') {
-                script{
-                    def qg = waitForQualityGate()
-                    if (qg.status != 'OK') {
+                timeout(time: 600, unit: 'SECONDS') {
+                    script{
+                        def qg = waitForQualityGate()
+                        if (qg.status != 'OK') {
                         error "Pipeline aborted due to quality gate failure: ${qg.status}"
+                        }
                     }
                 }
             }
-          }
         }
         stage('Package'){
             steps{
