add fix to the quality stage

--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -20,16 +20,18 @@ pipeline{
         }
         stage('CodeInspection'){
             steps{
-                sh'/var/jenkins_home/.sonar/sonar-scanner-4.7.0.2747-linux/bin/sonar-scanner \
+                withSonarQubeEnv('sonar_scanner'){
+                    sh'/var/jenkins_home/.sonar/sonar-scanner-4.7.0.2747-linux/bin/sonar-scanner \
                     -Dsonar.organization=at20-dc \
                     -Dsonar.projectKey=convert-service-dc \
                     -Dsonar.sources=. \
                     -Dsonar.host.url=https://sonarcloud.io'
+                }
             }
         }
         stage('Quality gate'){
             steps{
-                timeout(time: 600, unit: 'SECONDS') {
+                timeout(time: 3, unit: 'MINUTES') {
                     script{
                         def qg = waitForQualityGate()
                         if (qg.status != 'OK') {
