--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -19,13 +19,16 @@ pipeline{
             }
         }
         stage('CodeInspection'){
+            agent{
+                docker 'sonarsource/sonar-scanner-cli'
+            }
             steps{
                 withSonarQubeEnv('sonar_scanner'){
-                    sh'/var/jenkins_home/.sonar/sonar-scanner-4.7.0.2747-linux/bin/sonar-scanner \
-                    -Dsonar.organization=at20-dc \
-                    -Dsonar.projectKey=convert-service-dc \
-                    -Dsonar.sources=. \
-                    -Dsonar.host.url=https://sonarcloud.io'
+                    sh 'sonar-scanner \
+                        -Dsonar.organization=at20-dc \
+                        -Dsonar.projectKey=convert-service-dc \
+                        -Dsonar.sources=. \
+                        -Dsonar.host.url=https://sonarcloud.io'
                 }
             }
         }
