--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -59,7 +59,7 @@ pipeline{
         }
         stage('DeployToDev'){
             steps{
-                sh 'docker compose -f docker-compose.dc.yaml up -d'
+                sh 'docker-compose -f docker-compose.dc.yaml up -d'
                 sh 'echo command to run smoke test'
             }
         }
