--- a/docker-compose.dev.czn.yaml
+++ b/docker-compose.dev.czn.yaml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
   converter:
-    image: carolina01/at20_convert_service
+    image: at20_convert_service
     build: .
     ports:
       - '5000:9090'
