add thr stage to deploy to auto

--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -63,6 +63,11 @@ pipeline{
                 sh 'echo command to run smoke test'
             }
         }
+        stage('DeployToAuto') {
+            steps {
+                sh 'DOCKER_HOST=ssh://$TARGET_HOST docker-compose -f docker-compose.dc.yaml up -d'
+            }
+        }
     }
     post{
         always{
