--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -3,6 +3,8 @@ pipeline{
     environment {
         DOCKER_PASS = credentials('docker_pass')
         SONAR_TOKEN = credentials('sonar_token')
+        TARGET_HOST = '192.168.56.61'
+        TAG_VERSION = '1.0'
     }
     stages {
         stage("Test"){
@@ -51,21 +53,23 @@ pipeline{
         }
         stage('Publish'){
             steps{
+                //sh 'export TAG=$(git log --pretty=format:'%h' -n 1)'
                 sh 'docker login -u daniish77 -p ${DOCKER_PASS}'
-                sh 'docker tag at20_convert_service daniish77/at20_convert_service'
-                sh 'docker push daniish77/at20_convert_service'
+                sh 'docker tag at20_convert_service daniish77/at20_convert_service:${TAG_VERSION}'
+                sh 'docker push daniish77/at20_convert_service:${TAG_VERSION}'
             }
 
         }
         stage('DeployToDev'){
             steps{
-                sh 'docker-compose -f docker-compose.dc.yaml up -d'
+                sh 'docker-compose -e TAG_VERSION=:${TAG_VERSION} up -d'
                 sh 'echo command to run smoke test'
             }
         }
         stage('DeployToAuto') {
             steps {
                 sh 'DOCKER_HOST=ssh://$TARGET_HOST docker-compose -f docker-compose.dc.yaml up -d'
+                sh 'echo command to run automation tests'
             }
         }
     }
