--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline{
         DOCKER_PASS = credentials('docker_pass')
         SONAR_TOKEN = credentials('sonar_token')
         TARGET_HOST = '192.168.56.61'
-        //TAG_VERSION = '1.0'
+        TAG_VERSION = '1.0'
     }
     stages {
         stage("Test"){
@@ -48,21 +48,21 @@ pipeline{
         }
         stage('Package'){
             steps{
-                sh'docker build -t at20_convert_service:${env.GIT_COMMIT} .'
+                sh'docker build -t at20_convert_service .'
             }
         }
         stage('Publish'){
             steps{
                 //sh 'export TAG=$(git log --pretty=format:'%h' -n 1)'
                 sh 'docker login -u daniish77 -p ${DOCKER_PASS}'
-                sh 'docker tag at20_convert_service daniish77/at20_convert_service:${env.GIT_COMMIT}'
-                sh 'docker push daniish77/at20_convert_service:${env.GIT_COMMIT}'
+                sh 'docker tag at20_convert_service daniish77/at20_convert_service:${TAG_VERSION}'
+                sh 'docker push daniish77/at20_convert_service:${TAG_VERSION}'
             }
 
         }
         stage('DeployToDev'){
             steps{
-                sh 'docker-compose -e TAG=:${env.GIT_COMMIT} -f docker-compose.dc.yaml up -d'
+                sh 'docker-compose -f docker-compose.dc.yaml up -d'
                 sh 'echo command to run smoke test'
             }
         }
