--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -3,8 +3,9 @@ pipeline{
     environment {
         DOCKER_PASS = credentials('docker_pass')
         SONAR_TOKEN = credentials('sonar_token')
-        TARGET_HOST = '192.168.56.61'
-        TAG_VERSION = '1.0'
+        TARGET_HOST = '192.168.56.62'
+        GIT_COMMIT_HASH = sh (script: "git rev-parse --short HEAD", returnStdout: true)
+        //GIT_COMMIT_HASH = sh (script: "git log -n 1 --pretty=format:'%H'", returnStdout: true)
     }
     stages {
         stage("Test"){
@@ -55,14 +56,14 @@ pipeline{
             steps{
                 //sh 'export TAG=$(git log --pretty=format:'%h' -n 1)'
                 sh 'docker login -u daniish77 -p ${DOCKER_PASS}'
-                sh 'docker tag at20_convert_service daniish77/at20_convert_service:${TAG_VERSION}'
-                sh 'docker push daniish77/at20_convert_service:${TAG_VERSION}'
+                sh 'docker tag at20_convert_service daniish77/at20_convert_service:${GIT_COMMIT_HASH}'
+                sh 'docker push daniish77/at20_convert_service:${GIT_COMMIT_HASH}'
             }
 
         }
         stage('DeployToDev'){
             steps{
-                sh 'docker-compose -f docker-compose.dc.yaml up -d'
+                sh 'export TAG_VERSION=${GIT_COMMIT_HASH} && docker-compose -f docker-compose.dc.yaml up -d'
                 sh 'echo command to run smoke test'
             }
         }
@@ -75,8 +76,8 @@ pipeline{
     }
     post{
         always{
-            //sh 'docker rmi $(docker images -f "dangling=true" -q)'
-            sh 'docker image prune -a'
+            sh 'docker rmi $(docker images -f "dangling=true" -q)'
+            sh 'docker system prune -a'
         }
     }
 }
