--- a/Test1-dc.gocd.yaml
+++ b/Test1-dc.gocd.yaml
@@ -34,10 +34,10 @@ pipelines:
                 npm fund
             artifacts :
             - test:
-                source: build/reports/tests/test/index.xml
+                source: test/report/index.xml
                 destination: xml_report
             - build:
-                source: build/reports/tests/test/index.html
+                source: test/report/index.html
                 destination: html_report
     - code-inspection:
         fetch_materials: true
