--- a/Test1-dc.gocd.yaml
+++ b/Test1-dc.gocd.yaml
@@ -34,10 +34,10 @@ pipelines:
                 npm fund
             artifacts :
             - test:
-                source: test/report/index.xml
-                destination: xml_report
+                source: test/report/report.js
+                destination: js_report
             - build:
-                source: test/report/index.html
+                source: test/report/report.html
                 destination: html_report
     - code-inspection:
         fetch_materials: true
