--- a/Test1-dc.gocd.yaml
+++ b/Test1-dc.gocd.yaml
@@ -33,8 +33,8 @@ pipelines:
                 npm run test
             artifacts :
             - test:
-                source: test/report/report.js
-                destination: js_report
+                source: test/report/report.xml
+                destination: xml_report
             - build:
                 source: test/report/report.html
                 destination: html_report
