--- a/Test1-dc.gocd.yaml
+++ b/Test1-dc.gocd.yaml
@@ -5,6 +5,10 @@ pipelines:
     label_template: ${COUNT}
     lock_behavior: none
     display_order: -1
+    environment_variables:
+      GIT_COMMIT_HASH:
+    secure_variables:
+      SONAR_TOKEN: AES:DKno0ZKyMLbK42PVqz3vQw==:wHdzKXg5j+LhcZgl3EhrcA==
     materials:
       git-3bef966:
         git: https://github.com/AT20-DevOps/AT20_CONVERT_SERVICE.git
@@ -32,8 +36,12 @@ pipelines:
                 npm run test
             artifacts :
             - build:
-                source: test/report/report.html
+                source: AT20_CONVERT_SERVICE/test/report/report.html
                 destination: html_report
+            - build:
+                source: build
+            - build:
+                source: Dockerfile
     - code-inspection:
         fetch_materials: true
         keep_artifacts: false
@@ -44,9 +52,51 @@ pipelines:
         jobs:
           sonar:
             timeout: 0
+            resources :
+            - ubuntu
             tasks:
-            - exec:
-                arguments:
-                - sonar-scanner command
-                command: echo
+            - fetch:
+                is_file: false
+                source: build
+                job: unit-test
                 run_if: passed
+            - script: |
+                ls -la
+                /godata/.sonar/sonar-scanner-4.7.02747-linux/bin/sonar-scanner
+                    -Dsonar.organization=at20-dc
+                    -Dsonar.projectKey=convert-service-dc
+                    -Dsonar.sources=.
+                    -Dsonar.host.url=https://sonarcloud.io
+    - PackageandPublish:
+        fetch_materials: false
+        keep_artifacts: false
+        clean_workspace: false
+        approval:
+          type: success
+          allow_only_on_success: false
+        jobs:
+          docker:
+            timeout: 0
+            resources:
+            - docker
+            tasks:
+            - fetch:
+                is_file: false
+                source: build
+                stage: Test
+                job: unit-test
+                run_if: passed
+            - fetch:
+                is_file: true
+                source: Dockerfile
+                stage: Test
+                job: unit-test
+                run_if: passed
+            - script: |
+                docker build -t at20_convert_service .
+                docker login -u daniish77 -p ${DOCKER_PASS}
+                docker tag at20_convert_service daniish77/at20_convert_service:${GIT_COMMIT_HASH}
+                docker push daniish77/at20_convert_service:${GIT_COMMIT_HASH}
+
+
+
