--- a/Test1-dc.gocd.yaml
+++ b/Test1-dc.gocd.yaml
@@ -29,6 +29,7 @@ pipelines:
             tasks:
             - script : |
                 npm install
+                npm i --save-dev @types/jest
                 npm run test
             artifacts :
             - build:
