--- a/Test1-dc.gocd.yaml
+++ b/Test1-dc.gocd.yaml
@@ -33,7 +33,7 @@ pipelines:
                 npm run test
             artifacts :
             - build:
-                source: AT20_CONVERT_SERVICE/report/report.html
+                source: test/report/report.html
                 destination: html_report
     - code-inspection:
         fetch_materials: true
