--- a/Test-czn.gocd.yaml
+++ b/Test-czn.gocd.yaml
@@ -63,8 +63,4 @@ pipelines:
                 run_if: passed
             - script: |
               ls -la
-              echo sonar-scanner \
-                    -Dsonar.organization=at20-converter \
-                    -Dsonar.projectKey=at20-converter \
-                    -Dsonar.sources=. \
-                    -Dsonar.host.url=https://sonarcloud.io
+              echo sonar-scanner -Dsonar.organization=at20-converter -Dsonar.projectKey=at20-converter -Dsonar.sources=. -Dsonar.host.url=https://sonarcloud.io
