--- a/Test-czn.gocd.yaml
+++ b/Test-czn.gocd.yaml
@@ -61,7 +61,7 @@ pipelines:
                     -Dsonar.projectKey=at20-czn \
                     -Dsonar.sources=. \
                     -Dsonar.host.url=https://sonarcloud.io
-    - PackageAndPublish:
+    - Package:
         fetch_materials: false
         keep_artifacts: false
         clean_workspace: false
@@ -76,6 +76,20 @@ pipelines:
             tasks:
             - script: |
                 docker build -t at20_convert_service .
+    - Publish:
+        fetch_materials: false
+        keep_artifacts: false
+        clean_workspace: false
+        approval:
+          type: success
+          allow_only_on_success: false
+        jobs:
+          docker:
+            timeout: 0
+            resources :
+            - docker
+            tasks:
+            - script: |
                 docker login -u carolina01 --password-stdin <<< ${DOCKER_PASS}
                 docker tag at20_convert_service carolina01/at20_convert_service:${GIT_COMMIT_HASH}
                 docker push carolina01/at20_convert_service:${GIT_COMMIT_HASH}
