Add the resource for stage code inspection

--- a/Test-czn.gocd.yaml
+++ b/Test-czn.gocd.yaml
@@ -52,6 +52,8 @@ pipelines:
         jobs:
           sonar:
             timeout: 0
+            resources :
+            - ubuntu
             tasks:
             - script: |
                 sonar-scanner \
