Add path for sonar scanner for stage code inspection

--- a/Test-czn.gocd.yaml
+++ b/Test-czn.gocd.yaml
@@ -56,7 +56,7 @@ pipelines:
             - ubuntu
             tasks:
             - script: |
-                sonar-scanner \
+                /godata/.sonar/sonar-scanner-4.7.0.2747-linux/bin/sonar-scanner \
                     -Dsonar.organization=at20-czn \
                     -Dsonar.projectKey=at20-czn \
                     -Dsonar.sources=. \
