Fetch for the package stage

--- a/Test-czn.gocd.yaml
+++ b/Test-czn.gocd.yaml
@@ -62,7 +62,7 @@ pipelines:
                     -Dsonar.sources=. \
                     -Dsonar.host.url=https://sonarcloud.io
     - package:
-        fetch_materials: false
+        fetch_materials: true
         keep_artifacts: false
         clean_workspace: false
         approval:
