--- a/Test-czn.gocd.yaml
+++ b/Test-czn.gocd.yaml
@@ -123,3 +123,5 @@ pipelines:
                 run_if: passed
             - script: |
                 echo deploy here
+                ls -la
+                export TAG_VERSION=${GIT_COMMIT_HASH} && DOCKER_HOST=ssh://$TARGET_HOST docker-compose -f docker-compose-czn.yaml up -d
