--- a/Test-czn.gocd.yaml
+++ b/Test-czn.gocd.yaml
@@ -125,3 +125,18 @@ pipelines:
                 echo deploy here
                 ls -la
                 export TAG_VERSION=${GIT_COMMIT_HASH} && docker-compose -f docker-compose-czn.yaml up -d
+    - Smoke:
+        fetch_materials: false
+        keep_artifacts: false
+        clean_workspace: false
+        approval:
+          type: success
+          allow_only_on_success: false
+        jobs:
+          deployToDev:
+            timeout: 0
+            resources :
+            - docker
+            tasks:
+            - script: |
+                echo command to run smoke test
