--- a/Test1-dc.gocd.yaml
+++ b/Test1-dc.gocd.yaml
@@ -16,7 +16,7 @@ pipelines:
         username: daniish77
         shallow_clone: false
         auto_update: true
-        branch: task11-dc
+        branch: task12-dc
         encrypted_password: AES:L0A67qe/6sGlax8rPQJcJQ==:WGhnuvjwdkNCIcjOUtJ+XA==
     stages:
     - Test:
@@ -42,6 +42,10 @@ pipelines:
                 destination: html_report
             - build:
                 source: Dockerfile
+            - build:
+                source: docker-compose.dc.yaml
+            - build:
+                source: .env
     - code-inspection:
         fetch_materials: false
         keep_artifacts: false
@@ -63,7 +67,7 @@ pipelines:
                     -Dsonar.sources=. \
                     -Dsonar.host.url=https://sonarcloud.io
     - PackageandPublish:
-        fetch_materials: false
+        fetch_materials: true
         keep_artifacts: false
         clean_workspace: false
         approval:
@@ -80,7 +84,62 @@ pipelines:
                 docker login -u daniish77 -p ${DOCKER_PASS}
                 docker tag at20_convert_service daniish77/at20_convert_service:${GIT_COMMIT_HASH}
                 docker push daniish77/at20_convert_service:${GIT_COMMIT_HASH}
-
+            artifacts:
+              - build:
+                  source: docker-compose.dc.yaml
+              - build:
+                  source: .env
+  SmokeTest:
+    group: AT20group
+    label_template: ${COUNT}
+    lock_behavior: none
+    display_order: -1
+    environment_variables:
+      GIT_COMMIT_HASH: 1.2
+    materials:
+      Test:
+        pipeline: Test
+        stage: PackageandPublish
+    stages:
+    - DeployToDev:
+        fetch_materials: false
+        keep_artifacts: false
+        clean_workspace: false
+        approval:
+          type: success
+          allow_only_on_success: false
+        jobs:
+          deployToDev:
+            timeout: 0
+            resources :
+            - docker
+            tasks:
+            - fetch:
+                pipeline: Test
+                stage: PackageandPublish
+                job: docker
+                source: docker-compose.dc.yaml
+                is_file: true
+                run_if: passed
+            - script: |
+                echo deploy here
+                ls -la
+                export TAG_VERSION=${GIT_COMMIT_HASH} && docker-compose -f docker-compose.dc.yaml up -d
+    - Smoke:
+        fetch_materials: false
+        keep_artifacts: false
+        clean_workspace: false
+        approval:
+          type: success
+          allow_only_on_success: false
+        jobs:
+          deployToDev:
+            timeout: 0
+            resources :
+            - docker
+            tasks:
+            - script: |
+                echo command to run smoke test
 
 
 
