--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -22,6 +22,7 @@ pipeline{
             }
         }
         stage('CodeInspection'){
+            when { expression { params.skip_stage != true } }
             agent{
                 docker 'sonarsource/sonar-scanner-cli'
             }
@@ -68,6 +69,7 @@ pipeline{
             }
         }
         stage('DeployToAuto') {
+            when { expression { params.skip_stage != true } }
             steps {
                 sh 'export TAG_VERSION=${GIT_COMMIT_HASH} && DOCKER_HOST=ssh://$TARGET_HOST docker-compose -f docker-compose.dc.yaml up -d'
                 sh 'echo command to run automation tests'
