--- a/jenkins_dc/Jenkinsfile
+++ b/jenkins_dc/Jenkinsfile
@@ -26,7 +26,7 @@ pipeline{
             }
         }
         stage('CodeInspection'){
-            when { expression { params.skip_stage != true } }
+            //when { expression { params.skip_stage != true } }
             agent{
                 docker 'sonarsource/sonar-scanner-cli'
             }
@@ -41,7 +41,7 @@ pipeline{
             }
         }
         stage('Quality gate'){
-            when { expression { params.skip_stage != true } }
+            //when { expression { params.skip_stage != true } }
             steps{
                 timeout(time: 3, unit: 'MINUTES') {
                     script{
@@ -74,7 +74,7 @@ pipeline{
             }
         }
         stage('DeployToAuto') {
-            when { expression { params.skip_stage != false } }
+            //when { expression { params.skip_stage != false } }
             steps {
                 sh 'export TAG_VERSION=${GIT_COMMIT_HASH} && DOCKER_HOST=ssh://$TARGET_HOST docker-compose -f docker-compose.dc.yaml up -d'
                 sh 'echo command to run automation tests'
